# visual-vibe-coding.skill

./: .gitignore  CHECKLIST.md  LICENSE  README.md  SKILL.md  pyproject.toml
tests/: test_inspect.py  test_traces.py
visual_vibe_coding_skill/: cli.py  git_tools.py  inspector.py  memory.py  models.py  project_scan.py  render.py  traces.py
